package com.example.demo.checker;

public enum CheckResult {
    Success,
    Wrong
}
