package com.example.demo.checker;

public interface ICheckerData {
}
