package com.example.demo.entity.task;

public interface ITask {
   Long getUserID();
}
