package com.example.demo.entity.task;

public enum TaskType {
    Gitlab, Postgres, GrafanaPlusZabbix
}
