package com.example.demo.entity.user;

public enum Role {
    Teacher, Student, Admin
}
